--- a/jssquare.html
+++ b/jssquare.html
@@ -108,9 +108,9 @@ margin:0px 70px;
 				
 	function square(){
 	var a = document.getElementById('num').value; 
-	//var b = a*a;
-	prompt ('YOUR ANSWER IS :-',a*a)
- //document.getElementById('ans').innerHTML=b;
+	var b = a*a;
+	//prompt ('YOUR ANSWER IS :-',a*a)
+ document.getElementById('ans').placeholder=b;
  }
  
 </script>
