--- a/jssquare.html
+++ b/jssquare.html
@@ -87,7 +87,7 @@ margin:0px 70px;
 </head>
 <body>
 			<div>
-<h1 COLOR="GREEN";>MADE BY SHIVAM SINGH</h1>
+<center><h1><font color="#ff4069"> MADE BY SHIVAM SINGH </font></h1></center>
 			<div class="head">	<h1>
 					FIND SQUARE OF ANY NUMBER
 				</h1></div>
